--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "better-sqlite3": "^9.1.1",
-    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "slugify": "^1.6.6",
     "xss": "^1.0.15"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "next": "^16.0.1"
   }
 }
